kubernetes/platform/identity/keycloak/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
